--- a/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
+++ b/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
@@ -700,10 +700,10 @@ As long as the application and the information and services on the application a
             </objects>
             <point key="canvasLocation" x="-704.79999999999995" y="2807.9460269865071"/>
         </scene>
-        <!--Onboarding View Controller-->
+        <!--Start Date View Controller-->
         <scene sceneID="waf-xq-zEP">
             <objects>
-                <viewController modalPresentationStyle="pageSheet" id="bTt-r6-Zbo" customClass="OnboardingViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="pageSheet" id="bTt-r6-Zbo" customClass="StartDateViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YZm-ZB-YjW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -725,6 +725,9 @@ As long as the application and the information and services on the application a
                                 <constraints>
                                     <constraint firstAttribute="height" constant="162" id="ZKb-Jy-e87"/>
                                 </constraints>
+                                <connections>
+                                    <action selector="datePicker:" destination="bTt-r6-Zbo" eventType="valueChanged" id="8S9-0m-5bY"/>
+                                </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ci-cX-i1U">
                                 <rect key="frame" x="24" y="501" width="327" height="30"/>
@@ -762,7 +765,8 @@ As long as the application and the information and services on the application a
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="startDatePicker" destination="QzU-c0-HTC" id="pi7-Re-dl1"/>
+                        <outlet property="nextButton" destination="0ci-cX-i1U" id="NAr-9M-6oV"/>
+                        <outlet property="startDatePicker" destination="QzU-c0-HTC" id="dkv-QB-bWI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VGw-fh-6r2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1062,6 +1066,6 @@ As long as the application and the information and services on the application a
         <segue reference="ObA-6k-G1D"/>
         <segue reference="gOZ-GX-lbB"/>
         <segue reference="txR-hP-0Op"/>
-        <segue reference="cUK-rz-Iyd"/>
+        <segue reference="YoK-k6-TrP"/>
     </inferredMetricsTieBreakers>
 </document>
