--- a/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
+++ b/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
@@ -10,30 +10,11 @@
         <!--Dashboard-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="DashboardViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="9pv-A4-QxB" customClass="DashboardViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="First View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="KQZ-1w-vlD">
-                                <rect key="frame" x="112" y="302" width="151" height="43"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by FirstViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5M-7J-77L">
-                                <rect key="frame" x="90.5" y="353" width="194.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="6BV-lF-sBN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="8" symbolic="YES" id="cfb-er-3JN"/>
-                            <constraint firstItem="A5M-7J-77L" firstAttribute="centerX" secondItem="KQZ-1w-vlD" secondAttribute="centerX" id="e1l-AV-tCB"/>
-                            <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Dashboard" image="first" id="acW-dT-cKf"/>
@@ -45,14 +26,25 @@
         <!--Calendar-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="CalendarViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="8rJ-Kc-sve" customClass="CalendarViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzU-5V-C0N" customClass="FSCalendar">
-                                <rect key="frame" x="8" y="8" width="359" height="238"/>
+                                <rect key="frame" x="8" y="8" width="359" height="258"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="weekdayTextColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="titleDefaultColor">
+                                        <color key="value" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -76,7 +68,7 @@
         <!--Account-->
         <scene sceneID="fae-9j-jGh">
             <objects>
-                <tableViewController id="Zcj-Tj-7Zc" customClass="SettingsTableViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="account" id="Zcj-Tj-7Zc" customClass="SettingsTableViewController" customModule="uteroo_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="EgA-Ta-fSq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -320,7 +312,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
-                <tabBarController modalPresentationStyle="fullScreen" id="49e-Tb-3d3" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="home" modalPresentationStyle="fullScreen" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="FBV-nI-mFD"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
@@ -335,7 +327,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-705" y="0.0"/>
+            <point key="canvasLocation" x="-1220" y="1892"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Ayh-Kc-oix">
@@ -670,7 +662,7 @@ As long as the application and the information and services on the application a
                                     <color key="titleColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 </state>
                                 <connections>
-                                    <segue destination="49e-Tb-3d3" kind="showDetail" id="YoK-k6-TrP"/>
+                                    <segue destination="Cxf-Mi-gxm" kind="show" id="sG7-WR-2UG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -698,7 +690,7 @@ As long as the application and the information and services on the application a
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cQT-4X-z6w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-704.79999999999995" y="2807.9460269865071"/>
+            <point key="canvasLocation" x="-831" y="2808"/>
         </scene>
         <!--Start Date View Controller-->
         <scene sceneID="waf-xq-zEP">
@@ -736,6 +728,7 @@ As long as the application and the information and services on the application a
                                     <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </state>
                                 <connections>
+                                    <action selector="onNextClick:" destination="bTt-r6-Zbo" eventType="touchUpInside" id="azL-yh-sbB"/>
                                     <segue destination="x4V-xt-zL9" kind="show" id="txR-hP-0Op"/>
                                 </connections>
                             </button>
@@ -771,7 +764,7 @@ As long as the application and the information and services on the application a
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VGw-fh-6r2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="2807.9460269865071"/>
+            <point key="canvasLocation" x="-57" y="2803"/>
         </scene>
         <!--Period Duration View Controller-->
         <scene sceneID="aNn-oj-UeU">
@@ -840,6 +833,7 @@ As long as the application and the information and services on the application a
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="nextButton" destination="Bwt-Xu-3hZ" id="3GX-Oa-ngs"/>
                         <outlet property="periodPicker" destination="Jlj-cC-BEh" id="cpc-GE-8dl"/>
                     </connections>
                 </viewController>
@@ -880,6 +874,7 @@ As long as the application and the information and services on the application a
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="nextButton:" destination="Lt0-jV-IPM" eventType="touchUpInside" id="DsF-hT-izG"/>
                                     <segue destination="Cxf-Mi-gxm" kind="show" id="ObA-6k-G1D"/>
                                 </connections>
                             </button>
@@ -910,6 +905,7 @@ As long as the application and the information and services on the application a
                     </navigationItem>
                     <connections>
                         <outlet property="cycleDurationPicker" destination="Md4-2b-ayW" id="FyA-1k-sQC"/>
+                        <outlet property="nextButton" destination="v4R-Jz-LhU" id="0qZ-CV-ndW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5in-IA-RfT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -942,6 +938,9 @@ As long as the application and the information and services on the application a
                                     <constraint firstAttribute="width" constant="35" id="l2s-66-5X9"/>
                                 </constraints>
                                 <color key="onTintColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="toggle:" destination="Cxf-Mi-gxm" eventType="valueChanged" id="Qpj-K9-YYm"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="I agree to Uteroo's" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rq6-Pk-SnM">
                                 <rect key="frame" x="66" y="392" width="141" height="21"/>
@@ -967,7 +966,7 @@ As long as the application and the information and services on the application a
                                 </state>
                                 <connections>
                                     <action selector="acceptClick:" destination="Cxf-Mi-gxm" eventType="touchUpInside" id="OFb-wl-2AQ"/>
-                                    <segue destination="49e-Tb-3d3" kind="showDetail" id="cUK-rz-Iyd"/>
+                                    <segue destination="49e-Tb-3d3" kind="showDetail" identifier="id" id="cUK-rz-Iyd"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -993,6 +992,9 @@ As long as the application and the information and services on the application a
                         <viewLayoutGuide key="safeArea" id="Giw-ga-ZMV"/>
                     </view>
                     <navigationItem key="navigationItem" id="eTT-dm-tZY"/>
+                    <connections>
+                        <outlet property="acceptButton" destination="Wb3-6s-QKw" id="Ack-X9-fyn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Dv-ac-OLO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1035,8 +1037,10 @@ As long as the application and the information and services on the application a
         <!--Navigation Controller-->
         <scene sceneID="2Sv-oW-wes">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6mP-HW-vaD" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ba9-dD-ymy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationController storyboardIdentifier="onboarding" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="6mP-HW-vaD" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Joh-ww-S9Q"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vQL-hc-Cm7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1046,7 +1050,6 @@ As long as the application and the information and services on the application a
                         <segue destination="t7a-56-Puh" kind="relationship" relationship="rootViewController" id="1yn-6v-iC1"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ba9-dD-ymy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1644" y="2807.9460269865071"/>
         </scene>
@@ -1063,9 +1066,8 @@ As long as the application and the information and services on the application a
         <image name="undraw_time_management_30iu.png" width="1278" height="932"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ObA-6k-G1D"/>
+        <segue reference="sG7-WR-2UG"/>
         <segue reference="gOZ-GX-lbB"/>
         <segue reference="txR-hP-0Op"/>
-        <segue reference="YoK-k6-TrP"/>
     </inferredMetricsTieBreakers>
 </document>
