--- a/uteroo_ios/uteroo_ios/Base.lproj/LaunchScreen.storyboard
+++ b/uteroo_ios/uteroo_ios/Base.lproj/LaunchScreen.storyboard
@@ -3,40 +3,6 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
-            <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="RNP-jN-eol">
-                                <rect key="frame" x="16" y="134" width="343" height="183"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="RNP-jN-eol" secondAttribute="height" multiplier="15:8" id="RaH-mq-pQH"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RNP-jN-eol" secondAttribute="trailing" constant="16" id="EJM-gu-LXd"/>
-                            <constraint firstItem="RNP-jN-eol" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ceE-Vt-UHj"/>
-                            <constraint firstItem="RNP-jN-eol" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="134" id="oyq-Ch-18A"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="53" y="375"/>
-        </scene>
-    </scenes>
-    <resources>
-        <image name="logo.png" width="1610" height="1710"/>
-    </resources>
+    <scenes/>
 </document>
