--- a/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
+++ b/uteroo_ios/uteroo_ios/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,44 +16,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ring.png" translatesAutoresizingMaskIntoConstraints="NO" id="zOB-lT-hti">
-                                <rect key="frame" x="16" y="16" width="343" height="296"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="znI-j3-vVb">
+                                <rect key="frame" x="3" y="0.0" width="369" height="370"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CP0-8N-0s2">
+                                        <rect key="frame" x="24" y="20" width="327" height="330"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="330" id="Cn0-w2-xRh"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9gQ-zL-OUu" customClass="CircleLayout" customModule="uteroo_ios" customModuleProvider="target">
+                                            <size key="itemSize" width="45" height="45"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CircleCell" id="PVL-PX-w8Q">
+                                                <rect key="frame" x="0.0" y="0.0" width="45" height="50"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="jaI-Hp-bia">
+                                                    <rect key="frame" x="0.0" y="0.0" width="45" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <view contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OLx-2w-cmo" customClass="CircleView" customModule="uteroo_ios" customModuleProvider="target">
+                                                            <rect key="frame" x="5" y="5" width="25" height="25"/>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        </view>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="OLx-2w-cmo" firstAttribute="top" secondItem="jaI-Hp-bia" secondAttribute="top" constant="8" id="22P-Gf-XT1"/>
+                                                        <constraint firstItem="OLx-2w-cmo" firstAttribute="leading" secondItem="jaI-Hp-bia" secondAttribute="leading" constant="8" id="dhR-kQ-Wih"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="9pv-A4-QxB" id="B8w-kX-whQ"/>
+                                            <outlet property="delegate" destination="9pv-A4-QxB" id="0q5-f5-rRR"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="zOB-lT-hti" secondAttribute="height" multiplier="343:128" constant="-450.1875" id="NMv-l0-BCY"/>
+                                    <constraint firstItem="CP0-8N-0s2" firstAttribute="centerY" secondItem="znI-j3-vVb" secondAttribute="centerY" id="XAW-ZJ-j4z"/>
+                                    <constraint firstItem="CP0-8N-0s2" firstAttribute="leading" secondItem="znI-j3-vVb" secondAttribute="leading" constant="24" id="iiB-i1-OLy"/>
+                                    <constraint firstAttribute="trailing" secondItem="CP0-8N-0s2" secondAttribute="trailing" constant="18" id="mSo-iC-6nu"/>
+                                    <constraint firstItem="CP0-8N-0s2" firstAttribute="leading" secondItem="znI-j3-vVb" secondAttribute="leading" constant="24" id="opn-Nd-Nlj"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days til next period" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zW-8Y-E2n">
-                                <rect key="frame" x="114" y="101.5" width="147" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ovulation day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="za3-nd-uKo">
-                                <rect key="frame" x="16" y="154" width="343" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cycle duration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbT-ik-GBG">
-                                <rect key="frame" x="132" y="198.5" width="111" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="7zW-8Y-E2n" firstAttribute="centerX" secondItem="za3-nd-uKo" secondAttribute="centerX" id="FD9-lW-Nr4"/>
-                            <constraint firstItem="za3-nd-uKo" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="Igv-S8-bvM"/>
-                            <constraint firstItem="7zW-8Y-E2n" firstAttribute="centerX" secondItem="zOB-lT-hti" secondAttribute="centerX" id="M5h-a8-tyw"/>
-                            <constraint firstItem="zOB-lT-hti" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="16" id="PDu-0e-Qbv"/>
-                            <constraint firstItem="kbT-ik-GBG" firstAttribute="top" secondItem="za3-nd-uKo" secondAttribute="bottom" constant="24" id="Ppn-rl-IOc"/>
-                            <constraint firstItem="kbT-ik-GBG" firstAttribute="centerX" secondItem="za3-nd-uKo" secondAttribute="centerX" id="cyU-vL-4zh"/>
-                            <constraint firstItem="za3-nd-uKo" firstAttribute="centerY" secondItem="zOB-lT-hti" secondAttribute="centerY" id="eDF-lq-UJv"/>
-                            <constraint firstItem="za3-nd-uKo" firstAttribute="top" secondItem="7zW-8Y-E2n" secondAttribute="bottom" constant="32" id="fF3-N2-iE9"/>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="za3-nd-uKo" secondAttribute="trailing" constant="16" id="fJX-hb-VBk"/>
-                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="zOB-lT-hti" secondAttribute="trailing" constant="16" id="tde-bf-Z9w"/>
-                            <constraint firstItem="zOB-lT-hti" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="vib-Rh-cGE"/>
+                            <constraint firstItem="znI-j3-vVb" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="3" id="2i4-w5-eUN"/>
+                            <constraint firstItem="znI-j3-vVb" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="5ib-qd-PMu"/>
+                            <constraint firstItem="znI-j3-vVb" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="Zbj-L4-nrT"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="znI-j3-vVb" secondAttribute="bottom" constant="228" id="wcq-SC-C7D"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
@@ -1163,7 +1182,6 @@ As long as the application and the information and services on the application a
     <resources>
         <image name="first" width="30" height="30"/>
         <image name="logo.png" width="1610" height="1710"/>
-        <image name="ring.png" width="425" height="423"/>
         <image name="second" width="30" height="30"/>
         <image name="undraw_booking_33fn.png" width="1368" height="947"/>
         <image name="undraw_events_2p66.png" width="1206" height="961"/>
